Refactor render new.. functions and showing todo details

--- a/src/style.css
+++ b/src/style.css
@@ -2,9 +2,10 @@
 
 
 :root {
-    /* --clr-primary: rgb(54, 112, 199);
-    --clr-light: #f4f4f4;
-    --clr-dark: #333; */
+    /* --clr-primary: rgb(54, 112, 199); */
+     --clr-light: #f4f4f4; 
+     --clr-white: #fff;
+    --clr-dark: #333; 
     --font-family: "Poppins", sans-serif;
     --body-bg: rgb(252,251,247);
 }
@@ -17,7 +18,11 @@
 }
 
 body {
-    /* background-color: var(--body-bg); */
+    background-color: var(--body-bg);
+    /* background-color: #c9d6ff; */
+    /* background: url("./blue_sand_background.JPG"); */
+    /* background-size: 100%; */
+    background: linear-gradient(to right, #e2e2e2, #c9d6ff);
     font-family: var(--font-family);
     line-height: 1.6;
     font-weight: 400;
@@ -25,17 +30,19 @@ body {
 }
 
 .container {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     display: grid;
-    margin: 0 auto;
-    /* height: 600px; */
-    justify-content: center;
-    grid-template-columns: minmax(100px, 300px) minmax(250px, 500px);
-    margin-top: 30px;
+    /* margin: 0 auto; */
+    height: 100vh;
+    /* justify-content: center; */
+    grid-template-columns: 250px 1fr;
+    /* grid-template-columns: minmax(100px, 300px) minmax(250px, 500px); */
+    /* margin-top: 30px; */
 }
 
 .expandable-wrapper {
-    border: 1px solid black;
+    /* position: relative; */
+    /* border: 1px solid black; */
     display: grid;
     grid-template-rows: 0fr;
     transition: grid-template-rows 0.3s ease-out;
@@ -54,6 +61,69 @@ li {
     /* border: 1px solid black; */
 }
 
+#list-container {
+    padding-left: 20px;
+}
+
+#list-container li {
+    cursor: pointer;
+    list-style: circle;
+    /* letter-spacing: 2px; */
+    /* padding: 6px 0; */
+}
+
+#list-container li:hover {
+    opacity: 0.7;
+}
+
+.todo-main {
+    padding: 10px 0;
+    border-bottom: 1px solid var(--clr-dark);
+    display: grid;
+    grid-template-columns: 3fr 1fr 1fr;
+}
+
+form {
+    display: flex;
+}
+
+.btn {
+    cursor: pointer;
+    background: 0;
+    border: 0;
+    padding: 0;
+    color: inherit;
+
+    font-size: 1.5em;
+    font-weight: 500;
+    margin-right: 0.25em;
+    transition: opacity 250ms ease-in;
+}
+
+.btn:hover {
+    opacity: 0.7;
+}
+
+.new-input {
+    background: transparent;
+    border: 0;
+    color: inherit;
+    border-bottom: 1px solid var(--clr-dark);
+    font-size: inherit;
+    outline: none;
+    transition: border-bottom 150ms ease-in;
+    order: 2;
+    /* padding-left: 6px; */
+}
+
+.new-input:focus {
+    border-bottom-width: 3px;
+}
+
+.new-input:focus::placeholder {
+    opacity: 0.2;
+}
+
 .todo-header {
     display: flex;
     justify-content: space-between;
@@ -61,11 +131,41 @@ li {
 }
 
 .all-tasks {
-    border: 1px solid black;
+    background-color: var(--clr-white);
+    /* border: 1px solid black; */
+    padding-left: 20px;
+    /* letter-spacing: 0.5px; */
+}
+
+.task-list-header {
+    padding-top: 30px;
+    padding-bottom: 15px;
+    /* letter-spacing: 0.5px; */
 }
 
 .todo-list {
-    border: 1px solid green;
+    /* border: 1px solid green; */
+    margin: 30px;
+    padding: 10px;
+    background-color: var(--clr-white);
+    border-radius: 10px;
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
+}
+
+.glass {
+    /* background-color: rgba(255, 255, 255, .15);  
+    backdrop-filter: blur(5px); */
+    /* width: 500px;
+    height: 300px;
+    margin: 200px auto;
+    border: 1px solid rgba(255, 255, 255, 0.18); */
+
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    /* border-radius: 20px; */
+    /* box-shadow: 0 8px 32px 0 rgba(0,0,0, 0.37); */
+
 }
 
 .active-list {
