Refactor todo class to factory, add delete task btn

--- a/src/style.css
+++ b/src/style.css
@@ -129,7 +129,10 @@ form {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    color: inherit;
 }
+
+
 
 .list-headers {
     display: grid;
