--- a/src/style.css
+++ b/src/style.css
@@ -57,6 +57,45 @@ body {
     overflow: hidden;
 }
 
+.todo-details form {
+    display: grid;
+    grid-template-columns: 3fr 1fr 1fr;
+    gap: 5px;
+}
+
+.todo-details form div {
+    display: flex;
+    flex-direction: column;
+    font-size: 11px;
+}
+
+textarea {
+    width: 100%;
+    height: 100px;
+    font-size: 12px;
+}
+
+.delete-todo {
+    position: absolute;
+    top: 11px;
+    right: 0;
+    border-radius: 50%;
+    font-size: 11px;
+    font-weight: 600;
+    border: 1px solid var(--clr-dark);
+    height: 20px;
+    width: 20px;
+    background-color: inherit;
+    cursor: pointer;
+    color: var(--clr-dark);
+    /* padding: 4px; */
+}
+
+.delete-todo:hover {
+    background-color: #ff2c2c;
+    color: var(--clr-gray);
+}
+
 li {
     list-style: none;
     /* border: 1px solid black; */
@@ -82,6 +121,7 @@ li {
     border-bottom: 1px solid var(--clr-gray);
     display: grid;
     grid-template-columns: 3fr 1fr 1fr;
+    position: relative;
 }
 
 form {
@@ -186,4 +226,22 @@ form {
 
 .hidden {
     display: none;
+}
+
+.delete-stuff {
+    display: flex;
+    justify-content: flex-end;
+    gap: 10px;
+}
+
+.delete-stuff button {
+    padding: 2px 10px;
+    cursor: pointer;
+    font-size: 11px;
+}
+
+#active-task-count {
+    text-transform: uppercase;
+    font-weight: 400;
+    font-size: 14px;
 }
